add reporting link

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,4 +23,5 @@ nav:
   - Materials: materials.md
   - Procedure: procedure.md
   - Analysis: analysis.md
+  - Reporting: reporting.md
   - About: about.md
